--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>C-Cube</title>
     <meta name="theme-color" content="#000000" />
-    <meta property="og:title" content="Consulting &amp; Analytics Club, IIT Guwahati" />
-    <meta name="twitter:title" content="Consulting &amp; Analytics Club, IIT Guwahati" />
+    <meta property="og:title" content="GECA" />
+    <meta name="twitter:title" content="GECA" />
     <meta name="twitter:card" content="summary" />
     <meta property="og:type" content="website" />
     <meta name="description"
