--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="twitter:card" content="summary" />
     <meta property="og:type" content="website" />
     <meta name="description"
-        content="The Consulting and Analytics Club at IIT Guwahati aims to help students start a successful career in management consulting and data analytics through learning, practice and networking. The club is a dynamic interface for like-minded individuals operating through a ‘knowledge-session’ approach. We leverage focus groups and expert interviews to conduct in-depth research on core demand areas, facilitate skill-building among our members, and develop a keener business acumen to make a lasting impact on society. " />
+        content="The C-Cubeat GECA aims to help students start a successful career in coding and data analytics through learning and practice. The club is a dynamic interface for like-minded individuals operating through a ‘knowledge-session’ approach. We leverage focus groups and expert interviews to conduct in-depth research on core demand areas, facilitate skill-building among our members, and develop a keener business acumen to make a lasting impact on society. " />
     <meta property="og:image" content="" />
     <meta name="twitter:image" content="" />
     <meta name="twitter:description"
